# emergency-notifyd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/emergency-notify-sim/: CMakeLists.txt
apps/emergency-notify-sim/src/: main.cpp  sim_ubus.c
apps/emergency-notifyd/: CMakeLists.txt
apps/emergency-notifyd/src/: main.cpp  notifyd_ubus.c
apps/emergency-notifyd/src/actions/: siren_action.c  siren_action.h
apps/emergency-siren-service/: CMakeLists.txt
apps/emergency-siren-service/src/: main.cpp  siren_controller.c  siren_controller.h  siren_hw.c  siren_hw.h  siren_service.c
libs/common/: CMakeLists.txt
libs/common/include/emergency/: event.hpp  logger.hpp
libs/common/src/: event.cpp  logger.cpp
yocto/: emergency-notifyd.service  emergency-notifyd_git.bb
